<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#000">
	
    <TextView
        android:id="@+id/creditsText"
		android:text="@string/mentor"		
		android:textColor="#fff"
		android:layout_marginTop="50dp"
		android:textSize="30sp"
		android:textStyle="bold"
		android:layout_gravity="center_horizontal"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">
	</TextView>
	
    <TextView
        android:id="@+id/mentorText"
		android:text="@string/mentorname"		
		android:textColor="#fff"
		android:layout_marginTop="90dp"
		android:textSize="25sp"
		android:textStyle="bold"
		android:layout_gravity="center_horizontal"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">
	</TextView>
	
    <TextView
        android:id="@+id/members"
		android:text="@string/members"		
		android:textColor="#fff"
		android:layout_marginTop="130dp"
		android:textSize="30sp"
		android:textStyle="bold"
		android:layout_gravity="center_horizontal"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">
	</TextView>
	
    <TextView
        android:id="@+id/membersname1"
		android:text="@string/members1"		
		android:textColor="#fff"
		android:layout_marginTop="170dp"
		android:textSize="25sp"
		android:textStyle="bold"
		android:layout_gravity="center_horizontal"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">
	</TextView>
	
    <TextView
        android:id="@+id/membersname2"
		android:text=""		
		android:textColor="#fff"
		android:layout_marginTop="200dp"
		android:textSize="25sp"
		android:textStyle="bold"
		android:layout_gravity="center_horizontal"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">
	</TextView>
</FrameLayout>